# agent-config

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: validate.yml
bootstrap/: linux.sh  macos.sh  windows.ps1
config/change-sets/: windows-dev-safe.example.yaml
config/markets/: claude-official.yaml  codex-official.yaml  custom.example.yaml
config/policies/: install-policy.yaml  trust-policy.yaml
config/profiles/: ai-coding-workstation.yaml  default.yaml  windows-dev.yaml
docs/: agent-marketplace-policy.md  architecture.md  new-machine-bootstrap.md
docs/decisions/: win11-wsl-workstation-capabilities-plan.md
schemas/: apply-result.schema.json  audit-result.schema.json  change-set.schema.json  install-plan.schema.json  marketplace.schema.json  profile.schema.json
scripts/: sync-skill-assets.py  validate-config-shapes.py  validate.ps1  validate.sh
skills/agent-capability-bootstrap-audit/: SKILL.md
skills/agent-capability-bootstrap-audit/agents/: openai.yaml
skills/agent-capability-bootstrap-audit/references/: claude-code-adapter.md  codex-adapter.md  custom-marketplaces.md  environment-bootstrap.md  security-policy.md
skills/agent-capability-bootstrap-audit/scripts/: audit-agent-capabilities.py
src/agent_bootstrap/: __init__.py  cli.py
src/agent_bootstrap/adapters/: __init__.py  base.py  claude_code.py  codex.py  generic.py
src/agent_bootstrap/core/: __init__.py  apply.py  evidence.py  model.py  planner.py  policy.py
src/agent_bootstrap/detectors/: __init__.py  git.py  node.py  os_env.py  package_managers.py  python.py  repositories.py  runtimes.py  workstation.py
src/agent_bootstrap/installers/: __init__.py  claude_code.py  codex.py  (+1 more)
tests/: conftest.py  test_adapters.py  test_apply.py  test_detectors.py  test_evidence.py  test_market_schema.py  test_planner.py  test_smoke_cli.py  test_workstation.py
tests/fixtures/: linux.json  macos.json  windows.json
(+6 files in other folders)
